fix: adjust footer z-index for fixing bug

--- a/src/ui/Footer/Footer.module.css
+++ b/src/ui/Footer/Footer.module.css
@@ -5,5 +5,5 @@
     background-color: #ffe761;
     position: fixed;
     bottom: 0;
-    z-index: 2;
+    z-index: 9999;
 }
